# antboat

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: antennapod.rs  db.rs  main.rs  newsboat.rs
src/antennapod/: schema.rs
src/newsboat/: schema.rs
test/: AntennaPodBackup.db  cache.db  cache.test.json
